<resources>
    <string name="app_name">Honey Co.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="internet_error">Please check your internet connection</string>
    <string name="no_internet_exit_button">Exit</string>
    <string name="no_internet_retry_button">Retry</string>
    <string name="have_or_not_have_account_textColor">#FF9800</string>
    <string name="update_profile_successfully">Update successful</string>
    <string name="select_chooser">Select any Image</string>
    <string name="no_image_select">No Image is selected</string>
    <string name="check_you_email">Please check your email</string>
    <string name="enter_in_draw_successfully">Entered!</string>
    <string name="enter_in_draw_failed">Failed</string>
    <string name="add_a_new_product">Add a new Product</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="postcode">Postcode</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="camera">Camera</string>
    <string name="price">Price :</string>
    <string name="_120">$120</string>
    <string name="your_email">Your email</string>
    <string name="reset">reset</string>
    <string name="forgot_line">By clicking reset,\nyou will receive an email to reset your password</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="i_m_an_admin">I\'m an Admin</string>
    <string name="i_m_not_an_admin">I\'m not an Admin</string>
    <string name="product_name">Product Name</string>
    <string name="product_id">Product ID</string>
    <string name="product_category">Product Category</string>
    <string name="product_price">Product Price</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="enter_in_draw">Enter</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="HoneyBox">HoneyBox</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="sign_up_with_google">Sign up with google</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="sign_up">Sign Up</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="home">Home</string>
    <string name="draws">Your Giveaways</string>
    <string name="profile">Profile</string>
    <string name="communication">Communication</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="delete">delete</string>
    <string name="Settings">Settings</string>

    <string name="splash_screen">splash_screen</string>
    <string name="reg_activity_logo">reg_activity_logo</string>
    <string name="explore">Explore</string>
    <string name="about">About</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="entered">Entered</string>
    <string name="about_body_two">
    We also work in collaboration with businesses and entrepreneurs to offer promotional items to Honey users delivered to your
        doorstep free of charge. Stick with us and enjoy the benefits. </string>
    <string name="about_body_one">Honey Collaboration is a Giveaway and eCommerce platform based in the United Kingdom.
        Our aim is to provide users with seamless and stress-free ways to enter giveaways
        on a wide array of items from small prizes to aspirational brands and premium products all in one place.  </string>
    <string name="about_contact_us">Contact Us</string>
    <string name="about_header">What is Honey Collaborations.?</string>
    <string name="about_title">Honey Co.</string>
    <string name="logout_menu_item">Logout</string>
    <string name="about_email_image">about_email_image</string>
    <string name="about_email_address">honeycollaborations@gmail.com</string>
    <string name="rate_or_hate_next_giveaways">Rate or Hate Next Giveaways</string>

    <string-array name="product_categories">
        <item>Select</item>
        <item>Electronics</item>
        <item>Sports</item>
        <item>Shoes</item>
        <item>Shirts</item>
        <item>Dresses</item>
        <item>Gifts</item>
        <item>Babies</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="login_page_logo">login_page_logo</string>
    <string name="like_btn_image">like_btn_image</string>
    <string name="dislike">0</string>
    <string name="like">0</string>
    <string name="sign_up_logo">sign_up_logo</string>
    <string name="dislike_image_view">dislike image view</string>
    <string name="click_me">Click me</string>
    <string name="about_image_logo">About Image Logo</string>

    <string name="tool_bar_image">Tool Bar Image</string>
    <string name="rate_intro_iv">rate intro iv</string>
    <string name="delete_account_menu">Delete account</string>
    <string name="verify_your_email">Verify Your Email</string>
    <string name="we_ve_sent_you_a_confirmation_email_nplease_check_your_email_and_verify">We\'ve sent you a confirmation email.
        \nPlease Verify and Restart App to Login</string>
    <string name="JSON_URL">https://assets8.lottiefiles.com/packages/lf20_EjPIem.json</string>
    <string name="next_intro_ui">Next</string>
    <string name="get_started_intro_ui">get started</string>
    <string name="skip_intro_ui">skip</string>
    <string name="intro_layout_iv">intro layout iv</string>
    <string name="textview">TextView</string>
    <string name="rate_app">Rate App</string>
    <string name="version">\"Version \"</string>
    <string name="feedback">Feedback</string>
    <string name="version_xml">Version</string>
    <string name="pp_image">TODO</string>
    <string name="right_arrow">right arrow</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="right_arrow_two">right arrow two</string>
    <string name="t_s_and_c_s_icon">T\'s and C\'s icon</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="right_arrow_one">right arrow one</string>
    <string name="privacy_policy_image">privacy policy image</string>
    <string name="honey_logo_pp">Honey logo pp</string>
    <string name="go_to_website"> View on website</string>

</resources>