<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".UI.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/honey_logo_pp"
        android:src="@drawable/splash_resize" />

    <androidx.cardview.widget.CardView
        android:id="@+id/privacyCardView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="start|center"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:contentDescription="@string/privacy_policy_image"
            android:src="@drawable/ic_about_24" />

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/privacy_policy" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:contentDescription="@string/right_arrow_one"
            android:src="@drawable/ic_arrow_right_24" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/termsCardView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="start|center"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:contentDescription="@string/t_s_and_c_s_icon"
            android:src="@drawable/ic_policy_24" />

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/terms_and_conditions" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:contentDescription="@string/right_arrow_two"
            android:src="@drawable/ic_arrow_right_24" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/feedbackCardView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff"
        app:cardCornerRadius="10dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="start|center"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:contentDescription="@string/pp_image"
            android:src="@drawable/ic_feedback_24" />

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/feedback" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:contentDescription="@string/right_arrow"
            android:src="@drawable/ic_arrow_right_24" />

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/versionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/version_xml"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>